agregamos comandos de git

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <h1>
         hola
     </h1>
+    <h2>Comandos de git</h2>
+    <ol>
+        <li>Primer Comando: git init</li>
+        <li>Segundo Comando: git status</li>
+        <li>Tercer Comando: git add .</li>
+        <li>Cuarto Comando: git commit -m "mensaje"</li>
+    </ol>
+    <h2>Configuración de git: Se hace una sola vez</h2>
 </body>
 </html>
