--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <li>Segundo Comando: git status</li>
         <li>Tercer Comando: git add .</li>
         <li>Cuarto Comando: git commit -m "mensaje"</li>
+        <!-- una vez creadi el repositorio en github aparecen comandos nuevos -->
+        <li>git branch -M main</li>
+        <li>git remote ...</li>
+        <li>git push</li>
     </ol>
     <h2>Configuración de git: Se hace una sola vez</h2>
 </body>
