--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li>git branch -M main</li>
         <li>git remote ...</li>
         <li>git push</li>
+        <p>hola</p>
     </ol>
     <h2>Configuración de git: Se hace una sola vez</h2>
 </body>
